# takehome-qr-app

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
src/: io.py  pipeline.py
src/feature/: nodes.py  pipeline.py
src/primary/: nodes.py  pipeline.py
src/raw/: __init__.py
src/reporting/: dashboard.py
tests/feature/: conftest.py  test_feature_nodes.py
tests/primary/: conftest.py  test_primary_nodes.py
