[tool.poetry]
name = "qr-app"
version = "0.1.0"
description = "QR analytics project"
authors = ["vincentyyu <vjmwork3@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.12"
numpy = "^1.24.2"
pandas = "^1.5.3"
plotly = "^5.14.0"
dash = "^2.9.2"
dash-bootstrap-components = "^1.4.1"
pyarrow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
autoflake = "^2.0.2"
isort = "^5.12.0"
pre-commit = "^3.2.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
jupyterlab = "^3.6.3"
notebook = "^6.5.3"
ipykernel = "^6.22.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report html:htmlcov --cov=src"
testpaths = ["tests"]

[tool.autoflake]
in-place = true
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
